# svi_network

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/svi_network/: __init__.py
tests/: test_svi_network.py
