[tool.poetry]
name = "svi_network"
version = "0.0.1"
description = "A package to embed SVI into urban networks."
authors = ["winstonyym"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
